hoteldetails user name alignment fix

--- a/src/styles/hoteldetails.module.css
+++ b/src/styles/hoteldetails.module.css
@@ -21,8 +21,6 @@
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
-  line-height: 32px;
-  border: 2px solid red;
 }
 
 .des {
